WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214447
GenerateCertificateAsync should be called on signaling thread
https://bugs.webkit.org/show_bug.cgi?id=214447
Summary
GenerateCertificateAsync should be called on signaling thread
Sihui Liu
Reported
2020-07-17 00:25:23 PDT
...
Attachments
Patch
(10.72 KB, patch)
2020-07-17 00:35 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(5.94 KB, patch)
2020-07-20 02:15 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-07-17 00:35:26 PDT
Created
attachment 404545
[details]
Patch
Sihui Liu
Comment 2
2020-07-17 09:53:30 PDT
The added test would crash: # Fatal error in: /Volumes/Data/worker/macOS-Mojave-Debug-Build-EWS/build/Source/ThirdParty/libwebrtc/Source/webrtc/rtc_base/rtc_certificate_generator.cc, line 147 # last system error: 2 # Check failed: signaling_thread_->IsCurrent()
Alexey Proskuryakov
Comment 3
2020-07-18 11:24:24 PDT
Is this a duplicate of
bug 214478
? This was filed earlier, but that one is more comprehensive, listing more affected tests.
youenn fablet
Comment 4
2020-07-20 02:15:25 PDT
Created
attachment 404703
[details]
Patch
Geoffrey Garen
Comment 5
2020-07-20 09:26:29 PDT
Comment on
attachment 404703
[details]
Patch r=me
Geoffrey Garen
Comment 6
2020-07-20 09:27:26 PDT
Do we need to unskip storage/indexeddb/structured-clone-rtccertificate now?
youenn fablet
Comment 7
2020-07-20 09:52:59 PDT
(In reply to Geoffrey Garen from
comment #6
)
> Do we need to unskip storage/indexeddb/structured-clone-rtccertificate now?
LayoutTests/storage/indexeddb/structured-clone.html does not contain any RTCCertificate use (after
https://bugs.webkit.org/show_bug.cgi?id=214481
) so it should no longer crash. We probably forgot to reenable it. We should probably readd RTCCertificate in the test and reenable it at the same time.
EWS
Comment 8
2020-07-20 09:58:18 PDT
Committed
r264604
: <
https://trac.webkit.org/changeset/264604
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404703
[details]
.
Radar WebKit Bug Importer
Comment 9
2020-07-20 09:59:25 PDT
<
rdar://problem/65831740
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug