GenerateCertificateAsync should be called on signaling thread https://bugs.webkit.org/show_bug.cgi?id=214447

Reviewed by Geoffrey Garen.

Source/WebCore:

As per debug assert, GenerateCertificateAsync is expected to be called in the signaling thread.
Covered by unskipped test.

* Modules/mediastream/libwebrtc/LibWebRTCCertificateGenerator.cpp:
(WebCore::LibWebRTCCertificateGenerator::generateCertificate):
* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::LibWebRTCProvider::prepareCertificateGenerator):
We can pass generator to a background thread as it is allocated once and does not get freed.
* platform/mediastream/libwebrtc/LibWebRTCProvider.h:

LayoutTests:

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/227352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264604 268f45cc-cd09-0410-ab3c-d52691b4dbfc