Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.h
@@ -111,7 +111,8 @@ public:
     bool isSupportingVP9() const { return m_supportsVP9; }
     virtual void disableNonLocalhostConnections() { m_disableNonLocalhostConnections = true; }
 
-    rtc::RTCCertificateGenerator& certificateGenerator();
+    // Callback is executed on a background thread.
+    void prepareCertificateGenerator(Function<void(rtc::RTCCertificateGenerator&)>&&);
 
     Optional<RTCRtpCapabilities> receiverCapabilities(const String& kind);
     Optional<RTCRtpCapabilities> senderCapabilities(const String& kind);
